# califreeEEG

./: .env.example  .gitignore  README.md  calibration_free_eeg_codex_implementation_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: assets.yaml  canonical_channels.yaml  channel_sets.yaml
configs/data/: beta.yaml  openbci.yaml  synthetic.yaml  wang.yaml  wearable.yaml
configs/eval/: channel_stress.yaml  cross_dataset.yaml  cross_subject.yaml  openbci_external.yaml
configs/model/: full_latent.yaml  prompt_adapter.yaml  reve_wrapper.yaml  tiny_transformer.yaml
configs/train/: ablation.yaml  debug.yaml  ssvep_pretrain.yaml
data/: README.md
scripts/: _bootstrap.py  bootstrap_gpu_pod.sh  evaluate.py  export_results_table.py  fetch_dataset.py  fetch_reve.py  inspect_manifest.py  openbci_convert.py  openbci_record.py  prepare_dataset.py  prepare_synthetic.py  run_ablation.py  run_gpu_pod_full.sh  run_train_logged.sh  setup_gpu_pod.sh  train.py  verify_assets.py
src/cfeg/: constants.py  eval_loop.py  losses.py  metrics.py  train_loop.py
src/cfeg/assets/: errors.py  hf.py  paths.py  registry.py  verify.py
src/cfeg/baselines/: fbcca.py
src/cfeg/data/: collate.py  datasets.py  io_hdf5.py  label_mapping.py  prepare_beta.py  prepare_mat.py  prepare_openbci.py  prepare_wang.py  prepare_wearable.py  preprocess.py  schema.py  splits.py  ssvep_synthetic.py  transforms.py
tests/: test_assets.py  test_condition_encoder.py  test_losses.py  test_model_shapes.py  test_prepare_mat.py  test_reve_backbone.py  test_schema.py  test_transforms.py
(+11 files in other folders)
