[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibration-free-eeg"
version = "0.1.0"
description = "Calibration-free EEG decoding with acquisition-condition prompts and optional REVE backbone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "h5py>=3.9",
  "mne>=1.6",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "einops>=0.7",
  "torch>=2.1",
  "tensorboard>=2.14",
  "transformers>=4.45",
  "huggingface_hub>=0.25",
  "datasets>=2.20",
  "wandb>=0.17",
]

[project.optional-dependencies]
openbci = ["brainflow>=5.12"]
dvc = ["dvc>=3.50"]
moabb = ["moabb>=1.1"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
